<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PwdUpdateActivity">
    <EditText
        android:id="@+id/account_editText"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_account"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/code_editText"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/code"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/account_editText"
        app:layout_constraintTop_toBottomOf="@+id/account_editText"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/send_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/code_editText"
        app:layout_constraintEnd_toEndOf="@+id/account_editText"
        app:layout_constraintTop_toTopOf="@+id/code_editText" />

    <EditText
        android:id="@+id/pwd_insert_editText"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/pwd_insert_new"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/account_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/account_editText"
        app:layout_constraintTop_toBottomOf="@+id/code_editText"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/pwd_insert_again_editText"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/pwd_insert_new_again"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/account_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/account_editText"
        app:layout_constraintTop_toBottomOf="@+id/pwd_insert_editText"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/pwd_update"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/account_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/account_editText"
        app:layout_constraintTop_toBottomOf="@+id/pwd_insert_again_editText"
        app:layout_constraintVertical_bias="0.276" />
</androidx.constraintlayout.widget.ConstraintLayout>