<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/select_task_list_item"
        android:layout_width="25dp"
        android:layout_height="17dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/explain_label"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"

        android:contentDescription="@string/explain_label"
        android:src="@drawable/ic_label_explain"
        app:layout_constraintStart_toEndOf="@+id/select_task_list_item"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/schedule_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/explain_label"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/add_in_label"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_add_label"
        app:layout_constraintEnd_toStartOf="@+id/delete_label"
        app:layout_constraintStart_toEndOf="@+id/schedule_item_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_app" />

    <ImageView
        android:id="@+id/update_label"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_update_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintEnd_toStartOf="@+id/add_in_label"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/update_label" />

    <ImageView
        android:id="@+id/delete_label"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_margin="15dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/delete_label" />

</androidx.constraintlayout.widget.ConstraintLayout>