<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.TaskListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="bottom"
        android:layout_margin="15dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
           >
                <ImageView
                    android:id="@+id/history_list"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_list"
                    android:layout_gravity="left"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/task_list"
                    android:layout_marginStart="4dp"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="right">
            <ImageView
                android:id="@+id/select_task_list_item"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:src="@drawable/ic_select"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/add_task_list_item"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:src="@drawable/ic_add" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/select_list_layout"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/select_all"
                android:layout_marginStart="10dp"
                android:text="@string/select_all_labels"
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/delete_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_labels"
                android:layout_marginEnd="60dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/task_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#00000000"
            android:dividerHeight="6dp"/>
    </LinearLayout>

</LinearLayout>